# KNU_HW_Programming

./: README.md
HW_2/: Module.txt
HW_3/: main.cpp
HW_4/: main.cpp  solutions.txt
HW_5/: Dice.cpp  Dice.h  Fibb.cpp
HW_6/: CMakeLists.txt  Dice.h  Player.cpp  Player.h  README.md  Random.cpp  Random.h
HW_7/: CMakeLists.txt
HW_7/Demo/: CMakeLists.txt
HW_7/Lib/: CMakeLists.txt  UzVar.cpp  UzVar.h
HW_9/: main.cpp
Semestr1/HW_1/: main.cpp  video.txt
Semestr1/HW_2/: Operations.txt
Semestr1/HW_3/: task123.txt
Semestr1/HW_5/: CMakeLists.txt  Fibb.h  README.md  Random.cpp  Random.h  main.cpp
Semestr1/HW_6/: Dice.cpp  main.cpp
Semestr1/HW_7/Demo/: main.cpp
Semestr1/HW_8/: main.cpp
Semestr1/HW_9/: info.txt
Semestr2/HW_1/: main_1.cpp  main_2.cpp  main_3.cpp
Semestr2/HW_2/: QuineMcCluskey.h
Semestr2/HW_3/: Messenger.h  main_1.cpp  main_3.cpp
Semestr2/HW_4/: main_1.cpp  main_2.cpp  main_3.cpp
Semestr2/HW_5/: main_1.cpp  main_2.txt
Semestr2/HW_6/: CMakeLists.txt  main.cpp
Semestr2/Messenger/: Message.h  Messenger.h
